--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naeri Token Dashboard</title>
+    <title>Virblu Death Token Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <style>
         * {
@@ -489,8 +489,8 @@
     <div class="auth-container" id="authScreen">
         <div class="auth-card">
             <div class="auth-header">
-                <h1><i class="fas fa-key"></i> Naeri Token</h1>
-                <p>Khusus Reseller Script Naeri, ketahuan nyebar website? Blacklist!</p>
+                <h1><i class="fas fa-key"></i> Virblu Token</h1>
+                <p>Khusus Reseller Script Virblu, ketahuan nyebar website? Blacklist!</p>
             </div>
             
             <div class="auth-tabs">
