--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="repoOwner">Repository Owner</label>
-                            <input type="password" id="repoOwner" value="iLyxxDev"/>
+                            <input type="password" id="repoOwner" value="bluetokenss"/>
                         </div>
                         <div class="form-group">
                             <label for="repoName">Repository Name</label>
@@ -651,7 +651,7 @@
         </div>
         
         <div class="footer">
-            <p>Telegram &copy; @naeldev</p>
+            <p>Telegram &copy; @blueberrynic</p>
         </div>
     </div>
 
