--- a/index.html
+++ b/index.html
@@ -524,12 +524,12 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="signUpRepoOwner">Owner</label>
-                            <input type="password" id="signUpRepoOwner" placeholder="username-github-anda" value="iLyxxDev" />
+                            <input type="password" id="signUpRepoOwner" placeholder="username-github-anda" value="bluetokenss" />
                             <span class="form-note">Username GitHub Anda</span>
                         </div>
                         <div class="form-group">
                             <label for="signUpRepoName">Repository Name</label>
-                            <input type="password" id="signUpRepoName" placeholder="nama-repository" value="webpanel" />
+                            <input type="password" id="signUpRepoName" placeholder="nama-repository" value="datavirblu" />
                             <span class="form-note">Nama repository</span>
                         </div>
                     </div>
@@ -974,8 +974,8 @@
                 
                 // Gunakan konfigurasi default untuk mengambil data user
                 const defaultConfig = {
-                    owner: document.getElementById('signUpRepoOwner').value.trim() || 'iLyxxDev',
-                    repo: document.getElementById('signUpRepoName').value.trim() || 'webpanel',
+                    owner: document.getElementById('signUpRepoOwner').value.trim() || 'bluetokenss',
+                    repo: document.getElementById('signUpRepoName').value.trim() || 'datavirblu',
                     branch: 'main',
                     file: 'users'
                 };
@@ -1065,7 +1065,7 @@
         // Fungsi untuk mendapatkan konfigurasi repository token
         function getTokenRepoConfig() {
             return {
-                owner: document.getElementById('repoOwner').value.trim() || 'iLyxxDev',
+                owner: document.getElementById('repoOwner').value.trim() || 'bluetokenss',
                 repo: document.getElementById('repoName').value.trim() || 'database',
                 branch: document.getElementById('branchName').value.trim() || 'main',
                 file: 'token' // File khusus untuk token
