--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                     <div class="form-group">
                         <label for="signUpGithubToken">Reseller Access Token</label>
                         <input type="password" id="signUpGithubToken" placeholder="Masukkan Token" />
-                        <span class="form-note">Token ini digunakan untuk Akses Login dari @naeldev</span>
+                        <span class="form-note">Token ini digunakan untuk Akses Login dari @blueberrynic</span>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
