--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
         </div>
         
         <header>
-            <h1><i class="fas fa-key"></i> Naeri Access Token</h1>
-            <p class="subtitle">Khusus Reseller Script Naeri, ketahuan nyebar website? Blacklist!</p>
+            <h1><i class="fas fa-key"></i> Virblu Access Token</h1>
+            <p class="subtitle">Khusus Reseller Script Virblu, ketahuan nyebar website? Blacklist!</p>
         </header>
         
         <div class="card-grid">
